2016-03-18 Till Tantau <tantau@users.sourceforge.net>

	- First working, fully documented version of TikZ animations!

2016-02-24 Till Tantau <tantau@users.sourceforge.net>

	- Fixed manual stuff to compile it with dvisvgm.

2016-02-02 Till Tantau <tantau@users.sourceforge.net>

	- Rewrote tikz animation lib.

2016-01-06 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- added context-related aux file fix of Hans Hagen

2016-01-02 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed save stack issues (eliminated 'retaining' issues) about pgf@x and pgf@y

2015-12-29 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- external lib: 'force remake' now also updates .md5 files

2015-11-28 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fpu: fixed floor and ceil
	- fixed basic layer floor function
	- lua library: improved interoperability of luamath and fpu
	- unit test now compares luamath, fpu, and pgfbasic math

2015-11-15 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- activated math parser in foreach's end notation to allow \foreach \i in {0,...,10-9}

2015-09-09 Till Tantau <tantau@users.sourceforge.net>

	- Worked on pgfsys-dvisvgm.def a lot. Now requires
	dvisvgm-1.5.3 because of switch from pt to bp there. Does
	correct bounding box computations.

2015-09-06 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug in luamath library

2015-08-29 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- external lib: added support to automatically externalize references and
	labels with 'mode=convert with system call'

2015-08-24 Till Tantau <tantau@users.sourceforge.net>

	- Reworked implementation of animations for tikz and started
	on documentation of the backend.

2015-08-20 Till Tantau <tantau@users.sourceforge.net>

	- First complete implementation of animations for tikz! (for
	svg backend). Documentation still missing, but works nicely.
