@@ -941,8 +941,6 @@ Section~\ref{section-anim-attrs}.
     
 \subsubsection{The Time Syntax: Specifying Times}
 
-\label{section-anim-timeline}
-
 For each object--attribute pair you must specify the \emph{timeline}
 of the attribute. This is a curve that specifies for each ``moment in
 time'' which value the attribute should have. In the simplest case,
