@@ -22,6 +22,7 @@
 
 \include{pgfmanual-en-tikz-animations}
 \include{pgfmanual-en-base-animations}
+\include{pgfmanual-en-pgfsys-commands}
 \include{pgfmanual-en-pgfsys-animations}
 
 \end{document}
