@@ -58,9 +58,9 @@
 \def\reset@color{\special{color pop}}
 \def\set@page@color{\special{bgcolor \current@color}}
 \def\define@color@named#1#2{\expandafter\let\csname col@#1\endcsname\@nnil}
-\def\Grot@start{\special{dvisvgm:raw <g transform="translate({?x},{?y}) scale(1,-1) rotate(\Grot@angle) scale(-1,1) translate({?x},{?y}) scale(-1)">}}
+\def\Grot@start{\special{dvisvgm:raw <g transform="translate({?x},{?y})scale(1,-1)rotate(\Grot@angle)scale(-1,1)translate({?x},{?y})scale(-1)">}}
 \def\Grot@end{\special{dvisvgm:raw </g>}}
-\def\Gscale@start{\special{dvisvgm:raw <g transform="translate({?x},{?y}) scale(\Gscale@x,\Gscale@y) scale(-1) translate({?x},{?y}) scale(-1)">}}
+\def\Gscale@start{\special{dvisvgm:raw <g transform="translate({?x},{?y})scale(\Gscale@x,\Gscale@y)scale(-1)translate({?x},{?y})scale(-1)">}}
 \def\Gscale@end{\special{dvisvgm:raw </g>}}
 \def\Gin@extensions{.png,.jpg,.jpeg,.svg}
 \def\Ginclude@bitmap#1{%
