@@ -75,7 +75,10 @@
   \def\tikz@anim@result{#1}
   \ifx\tikz@anim@result\pgf@special@current@text%
   \else%
-    \tikz@animation@parser{#1}%
+    \ifx\tikz@animation@parser\relax%
+    \else%
+      \tikz@animation@parser{#1}%
+    \fi%
   \fi%
 }
 
