@@ -74,8 +74,8 @@
   \fi%
   \pgfsys@invalidate@currentid%
 }
-\def\pgfsys@stroke{\pgf@sys@svg@possiblyclippedpath{style="fill:none"}}
-\def\pgfsys@fill{\pgf@sys@svg@possiblyclippedpath{style="stroke:none"}}
+\def\pgfsys@stroke{\pgf@sys@svg@possiblyclippedpath{fill="none"}}
+\def\pgfsys@fill{\pgf@sys@svg@possiblyclippedpath{stroke="none"}}
 \def\pgfsys@fillstroke{\pgf@sys@svg@possiblyclippedpath{}}
 \def\pgfsys@clipnext{\pgf@sys@svg@clipnexttrue}
 \def\pgfsys@discardpath{%
@@ -223,23 +223,33 @@
 
 % IDs
 
+\newcount\pgf@sys@svg@type@count
+
 \def\pgfsys@clean@type#1#2{%
-  \let\pgf@id@replaced\pgfutil@empty%
-  \edef\pgf@id@temp{#2}%
-  \expandafter\pgf@id@replace@dots\pgf@id@temp.\pgf@stop%
-  \let\pgf@id@temp\pgf@id@replaced%
-  \let\pgf@id@replaced\pgfutil@empty%
-  \expandafter\expandafter\expandafter\pgf@id@replace@spaces\expandafter\pgf@id@temp\space\pgf@stop%
-  \let#1\pgf@id@replaced%
-}
-\def\pgf@id@replace@dots#1.{%
-  \pgfutil@ifnextchar\pgf@stop{\expandafter\def\expandafter\pgf@id@replaced\expandafter{\pgf@id@replaced#1}\pgfutil@gobble}%
-  {\expandafter\def\expandafter\pgf@id@replaced\expandafter{\pgf@id@replaced#1_}\pgf@id@replace@dots}%
-}
-\def\pgf@id@replace@spaces#1 {%
-  \pgfutil@ifnextchar\pgf@stop{\expandafter\def\expandafter\pgf@id@replaced\expandafter{\pgf@id@replaced#1}\pgfutil@gobble}%
-  {\expandafter\def\expandafter\pgf@id@replaced\expandafter{\pgf@id@replaced#1__}\pgf@id@replace@spaces}%
-}
+  \expandafter\let\expandafter#1\csname pgf@sys@svg@lookup@#2\endcsname%
+  \if#1\relax%
+    \global\advance\pgf@sys@svg@type@count by1\relax%
+    \expandafter\xdef\csname pgf@sys@svg@lookup@#2\endcsname{t\the\pgf@sys@svg@type@count}%
+    \expandafter\let\expandafter#1\csname pgf@sys@svg@lookup@#2\endcsname%
+  \fi%
+}  
+%   \let\pgf@id@replaced\pgfutil@empty%
+%   \edef\pgf@id@temp{#2}%
+%   \expandafter\pgf@id@replace@dots\pgf@id@temp.\pgf@stop%
+%   \let\pgf@id@temp\pgf@id@replaced%
+%   \let\pgf@id@replaced\pgfutil@empty%
+%   \expandafter\expandafter\expandafter\pgf@id@replace@spaces\expandafter\pgf@id@temp\space\pgf@stop%
+%   \let#1\pgf@id@replaced%
+% }
+% \def\pgf@id@replace@dots#1.{%
+%   \pgfutil@ifnextchar\pgf@stop{\expandafter\def\expandafter\pgf@id@replaced\expandafter{\pgf@id@replaced#1}\pgfutil@gobble}%
+%   {\expandafter\def\expandafter\pgf@id@replaced\expandafter{\pgf@id@replaced#1_}\pgf@id@replace@dots}%
+% }
+% \def\pgf@id@replace@spaces#1 {%
+%   \pgfutil@ifnextchar\pgf@stop{\expandafter\def\expandafter\pgf@id@replaced\expandafter{\pgf@id@replaced#1}\pgfutil@gobble}%
+%   {\expandafter\def\expandafter\pgf@id@replaced\expandafter{\pgf@id@replaced#1__}\pgf@id@replace@spaces}%
+% }
+
 
 
 % Graphics state
@@ -285,29 +295,77 @@
 % Color management
 % 
 
+\def\pgf@sys@svg@rgb@to@hash#1#2#3{%
+  {%
+    \pgf@sys@svg@do@color{#1}% 
+    \let\pgf@sys@svg@ra\pgf@sys@svg@hex@first%
+    \let\pgf@sys@svg@rb\pgf@sys@svg@hex@second%
+    \pgf@sys@svg@do@color{#2}%
+    \let\pgf@sys@svg@ga\pgf@sys@svg@hex@first%
+    \let\pgf@sys@svg@gb\pgf@sys@svg@hex@second%
+    \pgf@sys@svg@do@color{#3}%
+    \let\pgf@sys@svg@ba\pgf@sys@svg@hex@first%
+    \let\pgf@sys@svg@bb\pgf@sys@svg@hex@second%
+    \xdef\pgf@sys@svg@prepared{\pgf@sys@svg@hash\pgf@sys@svg@ra\pgf@sys@svg@rb\pgf@sys@svg@ga\pgf@sys@svg@gb\pgf@sys@svg@ba\pgf@sys@svg@bb}%
+    \ifx\pgf@sys@svg@ra\pgf@sys@svg@rb%
+      \ifx\pgf@sys@svg@ga\pgf@sys@svg@gb%
+        \ifx\pgf@sys@svg@ba\pgf@sys@svg@bb%
+          \xdef\pgf@sys@svg@prepared{\pgf@sys@svg@hash\pgf@sys@svg@ra\pgf@sys@svg@ga\pgf@sys@svg@ba}%
+        \fi%
+      \fi%
+    \fi%
+  }%
+}
+
+\expandafter\def\csname pgf@svg@0\endcsname{0}
+\expandafter\def\csname pgf@svg@1\endcsname{1}
+\expandafter\def\csname pgf@svg@2\endcsname{2}
+\expandafter\def\csname pgf@svg@3\endcsname{3}
+\expandafter\def\csname pgf@svg@4\endcsname{4}
+\expandafter\def\csname pgf@svg@5\endcsname{5}
+\expandafter\def\csname pgf@svg@6\endcsname{6}
+\expandafter\def\csname pgf@svg@7\endcsname{7}
+\expandafter\def\csname pgf@svg@8\endcsname{8}
+\expandafter\def\csname pgf@svg@9\endcsname{9}
+\expandafter\def\csname pgf@svg@10\endcsname{a}
+\expandafter\def\csname pgf@svg@11\endcsname{b}
+\expandafter\def\csname pgf@svg@12\endcsname{c}
+\expandafter\def\csname pgf@svg@13\endcsname{d}
+\expandafter\def\csname pgf@svg@14\endcsname{e}
+\expandafter\def\csname pgf@svg@15\endcsname{f}
+
+\def\pgf@sys@svg@do@color#1{%
+  \pgf@x#1\relax%
+  \c@pgf@counta\pgf@x%
+  \divide\c@pgf@counta by256\relax%
+  \ifnum\c@pgf@counta>255\relax%
+    \c@pgf@counta=255\relax%
+  \fi%
+  \ifnum\c@pgf@counta<0\relax%
+    \c@pgf@counta=0\relax%
+  \fi%
+  \c@pgf@countb\c@pgf@counta\relax%
+  \divide\c@pgf@countb by16\relax%
+  \expandafter\let\expandafter\pgf@sys@svg@hex@first\csname pgf@svg@\the\c@pgf@countb\endcsname%
+  \multiply\c@pgf@countb by16\relax%
+  \advance\c@pgf@counta by-\c@pgf@countb\relax%
+  \expandafter\let\expandafter\pgf@sys@svg@hex@second\csname pgf@svg@\the\c@pgf@counta\endcsname%
+}
+
 \def\pgf@sys@svg@color@rgb#1,#2,#3\relax{%
  {%
-    \pgf@xa=#1pt%
-    \pgf@xa=100\pgf@xa%
-    \pgf@xb=#2pt%
-    \pgf@xb=100\pgf@xb%
-    \pgf@xc=#3pt%
-    \pgf@xc=100\pgf@xc%
-    \xdef\pgf@sys@svg@prepared{rgb(\pgf@sys@tonumber\pgf@xa\pgf@sys@svg@percentchar,\pgf@sys@tonumber\pgf@xb\pgf@sys@svg@percentchar,\pgf@sys@tonumber\pgf@xc\pgf@sys@svg@percentchar)}%
-  }%
+   \pgf@sys@svg@rgb@to@hash{#1pt}{#2pt}{#3pt}%
+ }%
 }
 \def\pgf@sys@svg@color@cmy#1,#2,#3\relax{%
   {%
     \pgf@xa=1pt%
     \advance\pgf@xa by-#1pt%
-    \pgf@xa=100\pgf@xa%
     \pgf@xb=1pt%
     \advance\pgf@xb by-#2pt%
-    \pgf@xb=100\pgf@xb%
     \pgf@xc=1pt%
     \advance\pgf@xc by-#3pt%
-    \pgf@xc=100\pgf@xc%
-    \xdef\pgf@sys@svg@prepared{rgb(\pgf@sys@tonumber\pgf@xa\pgf@sys@svg@percentchar,\pgf@sys@tonumber\pgf@xb\pgf@sys@svg@percentchar,\pgf@sys@tonumber\pgf@xc\pgf@sys@svg@percentchar)}%
+    \pgf@sys@svg@rgb@to@hash{\pgf@xa}{\pgf@xb}{\pgf@xc}%
   }%
 }
 \def\pgf@sys@svg@color@cmyk#1,#2,#3,#4\relax{%
@@ -317,27 +375,26 @@
     \pgf@xa=#1\pgf@xa%
     \advance\pgf@xa by#4pt%
     \advance\pgf@xa by-1pt%
-    \pgf@xa=-100\pgf@xa%
+    \pgf@xa=-\pgf@xa%
     \pgf@xb=1pt%
     \advance\pgf@xb by-#4pt%
     \pgf@xb=#2\pgf@xb%
     \advance\pgf@xb by#4pt%
     \advance\pgf@xb by-1pt%
-    \pgf@xb=-100\pgf@xb%
+    \pgf@xb=-\pgf@xb%
     \pgf@xc=1pt%
     \advance\pgf@xc by-#4pt%
     \pgf@xc=#3\pgf@xc%
     \advance\pgf@xc by#4pt%
     \advance\pgf@xc by-1pt%
-    \pgf@xc=-100\pgf@xc%
-    \xdef\pgf@sys@svg@prepared{rgb(\pgf@sys@tonumber\pgf@xa\pgf@sys@svg@percentchar,\pgf@sys@tonumber\pgf@xb\pgf@sys@svg@percentchar,\pgf@sys@tonumber\pgf@xc\pgf@sys@svg@percentchar)}%
+    \pgf@xc=-\pgf@xc%
+    \pgf@sys@svg@rgb@to@hash{\pgf@xa}{\pgf@xb}{\pgf@xc}%
   }%
 }
 \def\pgf@sys@svg@color@gray#1\relax{%
- {%
+  {%
     \pgf@xa=#1pt%
-    \pgf@xa=100\pgf@xa%
-    \xdef\pgf@sys@svg@prepared{rgb(\pgf@sys@tonumber\pgf@xa\pgf@sys@svg@percentchar,\pgf@sys@tonumber\pgf@xa\pgf@sys@svg@percentchar,\pgf@sys@tonumber\pgf@xa\pgf@sys@svg@percentchar)}%
+    \pgf@sys@svg@rgb@to@hash{\pgf@xa}{\pgf@xa}{\pgf@xa}%
   }%
 }
 
@@ -347,6 +404,8 @@
 
 \def\pgf@sys@svg@colorpop{\special{color pop}}
 
+
+% RGB
 \def\pgfsys@color@rgb@stroke#1#2#3{%
   \pgf@sys@svg@color@rgb#1,#2,#3\relax%
   \pgf@sys@svg@gs@color{stroke="\pgf@sys@svg@prepared"}}
@@ -358,6 +417,16 @@
     \special{color push rgb #1 #2 #3}%
     \aftergroup\pgf@sys@svg@colorpop%
   \fi}
+\def\pgfsys@color@rgb#1#2#3{%
+  \ifpgfpicture%
+    \pgf@sys@svg@color@rgb#1,#2,#3\relax%
+    \pgf@sys@svg@gs@color{stroke="\pgf@sys@svg@prepared" fill="\pgf@sys@svg@prepared"}%
+  \else%
+    \special{color push rgb #1 #2 #3}%
+    \aftergroup\pgf@sys@svg@colorpop%
+  \fi}
+
+%CMYK
 \def\pgfsys@color@cmyk@stroke#1#2#3#4{%
   \pgf@sys@svg@color@cmyk#1,#2,#3,#4\relax%
   \pgf@sys@svg@gs@color{stroke="\pgf@sys@svg@prepared"}}
@@ -366,9 +435,19 @@
     \pgf@sys@svg@color@cmyk#1,#2,#3,#4\relax%
     \pgf@sys@svg@gs@color{fill="\pgf@sys@svg@prepared"}%
   \else%
-    \special{color push cmyk #1 #2 #3}%
+    \special{color push cmyk #1 #2 #3 #4}%
     \aftergroup\pgf@sys@svg@colorpop%
   \fi}
+\def\pgfsys@color@cmyk#1#2#3#4{%
+  \ifpgfpicture%
+    \pgf@sys@svg@color@cmyk#1,#2,#3,#4\relax%
+    \pgf@sys@svg@gs@color{stroke="\pgf@sys@svg@prepared" fill="\pgf@sys@svg@prepared"}%
+  \else%
+    \special{color push cmyk #1 #2 #3 #4}%
+    \aftergroup\pgf@sys@svg@colorpop%
+  \fi}
+
+% CMY
 \def\pgfsys@color@cmy@stroke#1#2#3{%
   \pgf@sys@svg@color@cmy#1,#2,#3\relax%
   \pgf@sys@svg@gs@color{stroke="\pgf@sys@svg@prepared"}}
@@ -380,6 +459,16 @@
     \special{color push cmyk #1 #2 #3 0}%
     \aftergroup\pgf@sys@svg@colorpop%
   \fi}
+\def\pgfsys@color@cmy#1#2#3{%
+  \ifpgfpicture%
+    \pgf@sys@svg@color@cmy#1,#2,#3\relax%
+    \pgf@sys@svg@gs@color{stroke="\pgf@sys@svg@prepared" fill="\pgf@sys@svg@prepared"}%
+  \else%
+    \special{color push cmyk #1 #2 #3 0}%
+    \aftergroup\pgf@sys@svg@colorpop%
+  \fi}
+
+% gray
 \def\pgfsys@color@gray@stroke#1{%
   \pgf@sys@svg@color@gray#1\relax%
   \pgf@sys@svg@gs@color{stroke="\pgf@sys@svg@prepared"}}
@@ -387,6 +476,14 @@
   \ifpgfpicture%
     \pgf@sys@svg@color@gray#1\relax%
     \pgf@sys@svg@gs@color{fill="\pgf@sys@svg@prepared"}%
+  \else%
+    \special{color push gray #1}%
+    \aftergroup\pgf@sys@svg@colorpop%
+  \fi}
+\def\pgfsys@color@gray#1{%
+  \ifpgfpicture%
+    \pgf@sys@svg@color@gray#1\relax%
+    \pgf@sys@svg@gs@color{stroke="\pgf@sys@svg@prepared" fill="\pgf@sys@svg@prepared"}%
   \else%
     \special{color push gray #1}%
     \aftergroup\pgf@sys@svg@colorpop%
@@ -656,6 +753,7 @@
     \edef\pgf@temp{#1}%
     \ifx\pgf@temp\pgfutil@empty%
     \else%
+      \pgfsys@register@type{#2}%
       \def\pgf@temp{\pgfsys@id@ref{#1}{#2}.}%
     \fi%
     \edef\pgf@@temp{#4}%
@@ -722,7 +820,8 @@
     \fi%
     \pgf@sys@svg@do@events{end}%
     #2%
-    \pgf@sys@svg@replace{xlink:href}{\#\pgfsys@id@ref{\pgfsys@anim@val@@id}{\pgfsys@anim@val@@type-canvas-\the\pgf@sys@svg@canvascount}}%
+    \pgfsys@register@type{\pgfsys@anim@val@@type}%
+    \pgf@sys@svg@replace{xlink:href}{\#\pgfsys@id@ref{\pgfsys@anim@val@@id canvas\the\pgf@sys@svg@canvascount}{\pgfsys@anim@val@@type}}%
     \ifx\pgfsys@anim@val@base\pgfutil@empty%
     \else%
       \edef\pgf@temp{{<#1 values="\pgfsys@anim@val@base" \pgf@sys@svg@key{xlink:href}/>\pgfsys@svg@newline}}%
@@ -730,7 +829,7 @@
     \fi%
     \pgfsysprotocol@literal{<#1\pgfsys@if@fresh@currentid{ id="\pgfsys@id@refcurrent"}{}\pgf@svg@anim@keys/>\pgfsys@svg@newline}%
     \pgfsys@invalidate@currentid%
-    \edef\pgf@temp{{\pgfsys@id@ref{\pgfsys@anim@val@@id}{\pgfsys@anim@val@@type-canvas-\the\pgf@sys@svg@canvascount}}}%
+    \edef\pgf@temp{{\pgfsys@id@ref{\pgfsys@anim@val@@id canvas\the\pgf@sys@svg@canvascount}{\pgfsys@anim@val@@type}}}%
     \expandafter\expandafter\expandafter\pgf@sys@attacher\expandafter\pgf@temp\pgfsys@anim@val@canvas@trans%
   }%
   \fi%
@@ -859,9 +958,8 @@
   % Animations must "look forward"...
   \pgfsys@if@fresh@id{#1}{#2}{}{\pgferror{Animations must precede the to-be-animated objects (``whom'')}}%
   \pgf@sys@svg@replace{@id}{#1}%
-  \pgfsys@clean@type\pgf@sys@svg@temp{#2}%
-  \pgf@sys@svg@replace{@type}{\pgf@sys@svg@temp}%
-  \pgf@sys@svg@replace{xlink:href}{\#\pgfsys@id@ref{#1}{\pgf@sys@svg@temp}}%
+  \pgf@sys@svg@replace{@type}{#2}%
+  \pgf@sys@svg@replace{xlink:href}{\#\pgfsys@id@ref{#1}{#2}}%
 }
 \def\pgfsys@animation@restart@always{\pgf@sys@svg@replace{restart}{always}}
 \def\pgfsys@animation@restart@never{\pgf@sys@svg@replace{restart}{never}}
