@@ -22,7 +22,7 @@
 \def\pgf@sys@svg@make@defs#1#2{{\let\#\pgf@sys@svg@hash\special{dvisvgm:rawset #1}\special{dvisvgm:rawdef #2}\special{dvisvgm:endrawset}}}
 \def\pgf@sys@svg@ref@defs#1{\special{dvisvgm:rawput #1}}
 \def\pgfsys@invoke#1{{\let\#\pgf@sys@svg@hash\special{dvisvgm:raw #1}}}
-\def\pgfsys@beginpicture{\special{color push gray 0}\pgf@sys@svg@inpicturetrue\pgfsys@invoke{<g transform="translate({?x},{?y}) scale(0.99626400996264,-0.99626400996264)">}}
+\def\pgfsys@beginpicture{\special{color push gray 0}\pgf@sys@svg@inpicturetrue\pgfsys@invoke{<g transform="translate({?x},{?y})scale(0.996264,-0.996264)">}}
 \def\pgfsys@endpicture{\pgfsys@invoke{</g>}\special{color pop}}
 
 \def\pgfsys@svg@newline{{?nl}}
@@ -35,7 +35,7 @@
     \ht#1=0pt%
     \dp#1=0pt%
     \pgfsys@begin@idscope%
-    \pgfsys@invoke{<g stroke="none" transform="scale(-1.00375,1.00375) translate({?x},{?y}) scale(-1,-1)">}\box#1\pgfsys@invoke{</g>}%
+    \pgfsys@invoke{<g stroke="none" transform="scale(-1.00375,1.00375)translate({?x},{?y})scale(-1,-1)">}\box#1\pgfsys@invoke{</g>}%
     \pgfsys@end@idscope%
   }%
 }
@@ -49,7 +49,7 @@
     \pgfsys@begin@idscope%
     \pgfsys@beginscope%
     \pgflowlevelsynccm%
-    \pgfsys@invoke{<g stroke="none" transform="scale(-1.00375,1.00375) translate({?x},{?y}) scale(-1,-1)">}\box#1\pgfsys@invoke{</g>}%
+    \pgfsys@invoke{<g stroke="none" transform="scale(-1.00375,1.00375)translate({?x},{?y})scale(-1,-1)">}\box#1\pgfsys@invoke{</g>}%
     \pgfsys@endscope%
     \pgfsys@end@idscope%
   }%
