@@ -1268,8 +1268,8 @@
         \let\pgfsys@viewboxslice\pgfsysanim@hooked@viewboxslice%
       \fi%
     }{}{}%
-    \pgfsys@clean@type\pgfsysanim@type@temp\pgfsysanim@whom@type%
-    \expandafter\xdef\csname pgfsysanim@hook@for@\pgfsys@id@ref{\pgfsysanim@whom@id}{\pgfsysanim@type@temp}\endcsname%
+%    \pgfsys@clean@type\pgfsysanim@type@temp\pgfsysanim@whom@type%
+    \expandafter\xdef\csname pgfsysanim@hook@for@\pgfsys@id@ref{\pgfsysanim@whom@id}{\pgfsysanim@whom@type}\endcsname%
     {{\pgfsysanim@x@val}{\pgfsysanim@y@val}{\pgfsysanim@z@val}{\pgfsysanim@w@val}}%
   \fi%
 }
@@ -1316,8 +1316,8 @@
         \let\pgfsys@closestroke\pgfsys@closestroke@hook%
       \fi%
     }{}{}%
-    \pgfsys@clean@type\pgfsysanim@type@temp\pgfsysanim@whom@type%
-    \expandafter\def\expandafter\pgfsysanim@temp\expandafter{\csname pgfsysanim@phook@for@\pgfsys@id@ref{\pgfsysanim@whom@id}{\pgfsysanim@type@temp}\endcsname}
+%    \pgfsys@clean@type\pgfsysanim@type@temp\pgfsysanim@whom@type%
+    \expandafter\def\expandafter\pgfsysanim@temp\expandafter{\csname pgfsysanim@phook@for@\pgfsys@id@ref{\pgfsysanim@whom@id}{\pgfsysanim@whom@type}\endcsname}
     \expandafter\expandafter\expandafter\gdef\expandafter\pgfsysanim@temp\expandafter{\pgfsysanim@path@val}%
   \fi%
 }
