@@ -1,3 +1,10 @@
+2016-03-31 Till Tantau <tantau@users.sourceforge.net>
+
+	- Lots of bugfixes in animation and svg code.
+	- Added optimizations to reduce file size for svg code
+	  (better support by dvisvgm will be needed however for more
+	  compact text!).
+
 2016-03-18 Till Tantau <tantau@users.sourceforge.net>
 
 	- First working, fully documented version of TikZ animations!
